    CHANGES in PHANGORN VERSION 2.11.0

OTHER CHANGES

    o Vignettes have been reorganised, rewritten and improved thanks to Iris.

    o small improvements to plot.codonTest, plot.networx

    o rell bootstrap values are now computed by default in optim.pml / pml_bb

BUG FIXES

    o fixed bug which caused warning on CRAN

    o densiTree does not draw an empty plot any more

    o Replace rgl.texts with texts3d, thanks to Duncan Murdoch


    CHANGES in PHANGORN VERSION 2.10.0

NEW FEATURES

    o several improvements to simplify workflow and flatten learning curve.

    o new function pml_bb, combining generation of starting trees, pml and

      optim.pml and allowing modelTest object as input.

    o tipdated phylogenies estimation (was with limitations possible before,

      but not documented).

    o Mkv model, edge length and rearrangements only work for ultrametric and

      tiplabeled phylogenies so far.

    o Added experimental version of RELL bootstrap (Minh et al. 2013 Ultrafast

      Approximation for Phylogenetic Bootstrap).

    o modelTest now tests several models for USER defined data.

OTHER CHANGES

    o some default values of of pratchet changed

    o updated, improved and reorganized several vignettes.

    o function allSitePattern got an argument additional type.


    CHANGES in PHANGORN VERSION 2.9.0

BUG FIXES

    o modelTest did not work if no tree was supplied

NEW FEATURES

    o some tidy functions: glance.phyDat, tidy.modelTest

OTHER CHANGES

    o dist.ml is a lot faster for the JC69 and F81 models if there are no

      ambiguous sites present.

    o added a few helper function to simplifiy some workflows (e.g. modelTest)


    CHANGES in PHANGORN VERSION 2.8.0

BUG FIXES

    o Use USE_FC_LEN_T in the C prototypes of LAPACK functions to correspond to

      code produced by gfortran >= 7. The mechanism was introduced in R 3.6.2

      and is planned to make its use obligatory in R 4.2.0.

    o bug in dna2codon fixed.
